--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/grutt/udacity-c2-image-filter#readme",
   "devDependencies": {
-    "@types/bluebird": "^3.5.33",
+    "@types/bluebird": "^3.5.38",
     "@types/express": "^4.17.0",
     "@types/node": "^11.13.17",
     "ts-node-dev": "^1.0.0-pre.40",
@@ -28,9 +28,12 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "@types/express-serve-static-core": "^4.17.32",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
-    "jimp": "^0.16.1",
-    "rimraf": "^3.0.2",
-    "lodash": "^4.17.15"
+    "jimp": "^0.16.2",
+    "lodash": "^4.17.15",
+    "npm-check-updates": "^16.6.2",
+    "rimraf": "^3.0.2"
   }
 }
